
[package]
name = "leaky-raft"
version = "0.1.0"
authors = ["Davis Wahl <daviswahl@gmail.com>"]
edition = "2018"

[dependencies]
tarpc = { git = "https://github.com/daviswahl/tarpc.git", branch = "fused-canceled-requests", features = ['serde1']}
tarpc-bincode-transport = { git = "https://github.com/google/tarpc.git", branch = "master" }
futures-preview = { version = "0.3.0-alpha.13",  features = ["io-compat"] }
futures-util-preview = { version = "0.3.0-alpha.13", features = ["io-compat"] }
futures-core-preview = { version = "0.3.0-alpha.13"}
tokio = { version = "0.1", features = ["async-await-preview"] }
tokio-executor = "0.1"
serde = { version = "1.0" }
crossbeam-channel = "0.3"
failure =  "0.1"
failure_derive = "0.1"
pin-utils = "0.1.0-alpha.4"
rand = "0.6"
env_logger = "0.6"
log = "0.4"
tempfile = "3.0"
bincode = "1.1"
tokio-serde-bincode = "0.2"
sled = "0.18.1"
tokio-async-await = "0.1.4"
clap = "~2.32"
ctrlc = { version = "3.0", features = ["termination"] }

[dependencies.futures_01]
version = "0.1.25"
package = "futures"

